# MyHouse24

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  manage.py  pyproject.toml
MyHouse24/: asgi.py  settings.py  urls.py  wsgi.py
config/: celery.py  settings.py  urls.py
src/apartments/: apps.py  models.py  urls.py
src/apartments/forms/: create_apartment_form.py
src/apartments/migrations/: 0001_initial.py  0002_apartment_house.py
src/apartments/views/: __init__.py  apartment_profile_view.py  apartments_database_view.py  create_apartment_view.py  delete_apartment_view.py  edit_apartment_view.py
src/core/: models.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/houses/: apps.py  models.py  urls.py
src/houses/forms/: create_house_form.py  edit_house_form.py  floor_form.py  section_form.py  staff_form.py
src/houses/migrations/: 0001_initial.py  0002_initial.py  0003_remove_apartment_house_remove_house_gallery_and_more.py  0004_remove_house_staff_house_staff.py  0005_staff_remove_house_staff_houseuser.py  0006_staff_house_staff_user_delete_houseuser.py  0007_remove_floor_section.py  0008_apartmentowner.py  (+1 more)
src/payments_section/: apps.py  models.py
src/roles/: apps.py  forms.py  models.py  utils.py
src/service/: apps.py  models.py  urls.py
src/statistic/: urls.py
src/users/: models.py  tasks.py  urls.py  utils.py
static/css/: custom.css
staticfiles/admin-lte/: composer.json  index.html  index2.html  index3.html  package-lock.json  package.json  starter.html
templates/admin/: adminlte_base.html
(+157 files in other folders)
