[tool.poetry]
name = "myhouse24"
version = "0.1.0"
description = ""
authors = ["valeriiastartseva <kaleriiastartseva505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
