[tool.poetry]
name = "myhouse24"
version = "0.1.0"
description = ""
authors = ["valeriiastartseva <kaleriiastartseva505@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12"
django = "^5.1.2"
django-adminlte3 = "^0.1.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
